--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
+    "effector": "^21.7.3",
+    "effector-react": "^21.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
